--- a/arch/arm64/boot/dts/renesas/r8a7795-salvator-x-dom0.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-salvator-x-dom0.dts
@@ -46,7 +46,7 @@
 	};
 
 	chosen {
-		bootargs = "dom0_mem=752M console=dtuart dtuart=serial0 dom0_max_vcpus=8 bootscrub=0 flask_enforcing=1 loglvl=all";
+		bootargs = "dom0_mem=752M console=dtuart dtuart=serial0 dom0_max_vcpus=8 bootscrub=0 flask_enforcing=1 loglvl=all cpufreq=xen:ondemand";
 		xen,dom0-bootargs = "console=hvc0 root=/dev/nfs nfsroot=192.168.1.1:/tftpboot/dom0-rootfs ip=192.168.1.21 rw rootwait rootfstype=ext4 ignore_loglevel cma=128M";
 		modules {
 			#address-cells = <2>;
