r8a7795-salvator-x-dom0.dts: Add clock support for all CPUs
This patch adds the CPU clocks so that the CPU DVFS can be enabled.

Although A53 cores are not DVFS capable, add clocks for them too.

According to the bindings:
https://www.kernel.org/doc/Documentation/devicetree/bindings/arm/arm%2Cscpi.txt

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>

--- a/arch/arm64/boot/dts/renesas/r8a7795-salvator-x-dom0.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-salvator-x-dom0.dts
@@ -362,7 +362,36 @@
 };
 
 &a57_0 {
+	clocks = <&scpi_dvfs 0>;
 	cpu-supply = <&vdd_dvfs>;
+};
+
+&a57_1 {
+	clocks = <&scpi_dvfs 0>;
+};
+
+&a57_2 {
+	clocks = <&scpi_dvfs 0>;
+};
+
+&a57_3 {
+	clocks = <&scpi_dvfs 0>;
+};
+
+&a53_0 {
+	clocks = <&scpi_dvfs 1>;
+};
+
+&a53_1 {
+	clocks = <&scpi_dvfs 1>;
+};
+
+&a53_2 {
+	clocks = <&scpi_dvfs 1>;
+};
+
+&a53_3 {
+	clocks = <&scpi_dvfs 1>;
 };
 
 &pwm1 {
