--- a/arch/arm64/boot/dts/renesas/r8a7795-salvator-x-dom0.dts
+++ b/arch/arm64/boot/dts/renesas/r8a7795-salvator-x-dom0.dts
@@ -363,7 +363,6 @@
 
 &a57_0 {
 	clocks = <&scpi_dvfs 0>;
-	cpu-supply = <&vdd_dvfs>;
 };
 
 &a57_1 {
@@ -379,20 +378,22 @@
 };
 
 &a53_0 {
-	clocks = <&scpi_dvfs 1>;
+	/delete-property/clocks;
 };
 
 &a53_1 {
-	clocks = <&scpi_dvfs 1>;
+	/delete-property/clocks;
 };
 
 &a53_2 {
-	clocks = <&scpi_dvfs 1>;
+	/delete-property/clocks;
 };
 
 &a53_3 {
-	clocks = <&scpi_dvfs 1>;
+	/delete-property/clocks;
 };
+
+/delete-node/&avs_sensor;
 
 &pwm1 {
 	pinctrl-0 = <&pwm1_pins>;
@@ -887,22 +888,6 @@
 
 &audio_clk_a {
 	clock-frequency = <22579200>;
-};
-
-&i2c_dvfs {
-	status = "okay";
-
-	clock-frequency = <400000>;
-
-	vdd_dvfs: regulator@30 {
-		compatible = "rohm,bd9571mwv";
-		reg = <0x30>;
-
-		regulator-min-microvolt = <750000>;
-		regulator-max-microvolt = <1030000>;
-		regulator-boot-on;
-		regulator-always-on;
-	};
 };
 
 &avb {
